--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,15 +110,7 @@ header nav ul li a {
     background-color: var(--third-color)
 }
 
-.runbuddy img {
-    width: 50%;
-    margin: 10px;
-    padding: 5px;
-    border: 10px solid var(--fourth-color);
-    border-radius: 20px;
-}
-
-.robotwars img {
+.runbuddy img, .robotwars img, .css img, .javascript img {
     width: 50%;
     margin: 10px;
     padding: 5px;
@@ -136,48 +128,37 @@ header nav ul li a {
     color: var(--fifth-color);
 }
 
-.social-media {
+.my-work h1 {
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+}
+
+/*end of my work section*/
+
+.contact-me {
     display: flex;
-    flex-wrap: none;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     padding: 10px 0 10px 0;
     text-align: center;
     background-color: var(--fourth-color);
-    color: var(--fifth-color)
+    color: var(--fifth-color);
+    align-content: stretch;
+    align-items: center;
+    flex-direction: row;
 }
 
-.social-media h1 {
-    font-weight: bold;
-    font-size: 50px;
-    padding: 20px 30px 30px 20px;
-}
-
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
+/*footer styles*/
 
 footer {
     background-color: var(--fourth-color);
     color: var(--fifth-color);
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-end;
     padding: 20px 0 20px 0;
     font-size: 10px;
-
+    flex-direction: column;
 }
 
+/*end footer styles*/
